--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,2 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="#">Library Management System</a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <a class="nav-link" href="javascript.void(0)" [routerLink]="['/signup']" *ngIf="!currentStatus">Sign Up</a>
-      <a class="nav-link" href="javascript.void(0)" [routerLink]="['/login']" *ngIf="!currentStatus">Login</a>
-      <a class="nav-link" href="javascript.void(0)" (click)="logout()" *ngIf="currentStatus">Logout</a>
-      </form>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet> 
