--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link cust-text-color" href="#">USER</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled cust-text-color" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link cust-text-color" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
