--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <hr style="margin-bottom: 0px;">
         <div class="row">
             <div *ngIf="!manageUser" class="col-md-3 cust-background-color">
-                <app-sidebar [manageUser]="manageUser"></app-sidebar> 
+                <app-sidebar [manageSidebar]="manageSidebar" [userId]="userId"></app-sidebar> 
             </div>
             <div [ngClass]="manageUser== true?'col-md-12':'col-md-9'">
                 <router-outlet></router-outlet>
