--- a/src/app/user/change-password/change-password.component.html
+++ b/src/app/user/change-password/change-password.component.html
@@ -1,1 +1,32 @@
-<p>change-password works!</p>
+<div class="card cust-border-color mt-3">
+    <div
+        class="card-header text-center cust-background-color cust-text-color cust-header-padding cust-header-font-size">
+        Change Password
+    </div>
+    <div class="card-body">
+        <form [formGroup]="changePasswordForm" (validSubmit)="changePassword()">
+            <div class="form-group row">
+                <label class="label-control col-md-3">Old Password</label>
+                <input type="password" (keyup)="updateAlertMessage()" class="form-control col-md-9" id="oldPassword" name="oldPassword" formControlName="oldPassword"
+                    required>
+                    <bfv-messages class="col-md-9 offset-md-3"></bfv-messages>
+                    <span *ngIf="alertMessage" class="col-md-9 offset-md-3 text-danger">Old password is incorrect</span>
+            </div>
+            <div class="form-group row">
+                <label class="label-control col-md-3">New Password</label>
+                <input type="password" (keyup)="updateDidNotMatch()" class="form-control col-md-9" id="newPassword" name="newPassword" formControlName="newPassword" required>
+                <bfv-messages class="col-md-9 offset-md-3"></bfv-messages>
+            </div>
+            <div class="form-group row">
+                <label class="label-control col-md-3">Confirm Password</label>
+                <input type="password" (keyup)="updateDidNotMatch()" class="form-control col-md-9" id="confirmPassword" name="confirmPassword" formControlName="confirmPassword" required>
+                <bfv-messages class="col-md-9 offset-md-3"></bfv-messages>
+                <span *ngIf="didNotMatch" class="col-md-9 offset-md-3 text-danger">New and confirm password not match</span>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn cust-background-color cust-border-color cust-text-color"
+                (ngSubmit)="changePassword()">Change Password</button>
+            </div>
+        </form>
+    </div>
+</div>
