--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>*ngxPermissionsOnly="['ADMIN']"
 </button> -->
-<div *ngIf="!manageUser">
+<div *ngIf="!manageSidebar">
     <ul class="list-group">
           <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/user/user-details']">Profile Details</a>
           <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/user/edit-profile']">Edit Profile</a>
@@ -10,11 +10,10 @@
           <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/user/generate-report']">Generate Report</a>
     </ul>
 </div>
-<div *ngIf="manageUser">
+<div *ngIf="manageSidebar">
     <ul class="list-group">
-          <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/user/user-details']">manage</a>
-          <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/user/edit-profile']">Edit Profile</a>
-          <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/user/change-password']">Change Password</a>
-          <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/user/generate-report']">Generate Report</a>
+          <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/manage/user-details', userId]">User Profile</a>
+          <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/manage/edit-profile', userId]">Edit Profile</a>
+          <a class="list-group-item list-group-item-action cust-background-color cust-text-color" [routerLink]="['/manage/generate-report',userId]">Generate Report</a>
     </ul>
 </div>
